--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sommerengineering.retrofit" >
+    package="com.sommerengineering.sample" >
     
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".ViewUI" >
+        <activity android:name="com.sommerengineering.sample.ViewUI" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
