--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.sommerengineering.sample"
+        applicationId "com.sommerengineering.easample"
         minSdkVersion 24 // 24 for this sample app
         targetSdkVersion 29
         versionCode 1
