--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ dependencies {
     // UI
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
 
     // test
     testImplementation 'junit:junit:4.13'
