--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,22 +12,6 @@ android {
         viewBinding true
     }
 
-    signingConfigs {
-
-        // debug signing configuration is handled by Android Studio
-
-        release {
-
-            // google manages app signing from play store to each device, using a key hidden in their secure infrastructure
-            // developer uploads to the play console must be signed with the certs in keystore.jks (upload key)
-
-            storeFile file("../keystore.jks")
-            storePassword properties['storePassword']
-            keyAlias properties['keyAlias']
-            keyPassword properties['keyPassword']
-        }
-    }
-
     defaultConfig {
         applicationId "com.sommerengineering.easample"
         minSdkVersion 24 // 24 for this sample app
@@ -41,9 +25,13 @@ android {
         buildConfigField "String", "TOKEN", properties['token']
     }
 
+    // todo add whitelabel dimensions here .. for example a set of unique backend endpoints
+    //  dimension = "greenlots"
+    //  dimension = "sulzer-us"
+
     buildTypes {
         release {
-            signingConfig signingConfigs.release
+            // signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
