--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,9 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-        //
-        buildConfigField "String", "TOKEN", properties['token']
+        buildConfigField "String", "TOKEN", properties['token'] // Java accessible
+        resValue "string", "MAP_KEY", properties['mapKey'] // XML accessible
     }
 
     // todo add whitelabel dimensions here .. for example a set of unique backend endpoints
