--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
 
     defaultConfig {
         applicationId "com.sommerengineering.easample"
-        minSdkVersion 24 // 24 for this sample app
+        minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -23,7 +23,7 @@ android {
         resValue "string", "MAP_KEY", properties['mapKey'] // XML accessible
     }
 
-    // todo add whitelabel dimensions here .. for example a set of unique backend endpoints
+    // todo add whitelabel "flavor" dimensions here .. for example a set of unique backend endpoints
     //  dimension = "greenlots"
     //  dimension = "sulzer-us"
 
@@ -34,6 +34,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    // use Java 8 in project
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
@@ -42,6 +44,8 @@ android {
 }
 
 dependencies {
+
+    // core Java
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // UI
@@ -52,20 +56,32 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.annotation:annotation:1.1.0'
 
-    // test
+    // JUnit
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    // retrofit
+    // Retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    // livedata
+    // LiveData
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0'
 
     // navigation
     implementation 'androidx.navigation:navigation-fragment:2.2.2'
     implementation 'androidx.navigation:navigation-ui:2.2.2'
+
+    // Hilt
+    implementation 'com.google.dagger:hilt-android:2.28-alpha'
+    annotationProcessor 'com.google.dagger:hilt-android-compiler:2.28-alpha'
+
+        // instrumentation tests
+        androidTestImplementation  'com.google.dagger:hilt-android-testing:2.28-alpha'
+        androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.28-alpha'
+
+        // unit tests
+        testImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
+        testAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.28-alpha'
 }
