--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,39 +49,39 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // UI
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation "androidx.appcompat:appcompat:$appcompat"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
+    implementation "com.google.android.gms:play-services-maps:$play_services_maps"
+    implementation "androidx.legacy:legacy-support-v4:$legacy_support_v4"
+    implementation "com.google.android.material:material:$material"
+    implementation "androidx.annotation:annotation:$annotation"
 
     // JUnit
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation "junit:junit:$junit"
+    androidTestImplementation "androidx.test.ext:junit:$androidx_junit"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espressor_core"
 
     // Retrofit2
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.squareup.retrofit2:converter-gson:$converter_gson"
 
     // LiveData
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_extensions"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_viewmodel"
 
     // navigation
-    implementation 'androidx.navigation:navigation-fragment:2.2.2'
-    implementation 'androidx.navigation:navigation-ui:2.2.2'
+    implementation "androidx.navigation:navigation-fragment:$navigation_fragment"
+    implementation "androidx.navigation:navigation-ui:$navigation_ui"
 
     // Hilt
-    implementation 'com.google.dagger:hilt-android:2.28-alpha'
-    annotationProcessor 'com.google.dagger:hilt-android-compiler:2.28-alpha'
+    implementation "com.google.dagger:hilt-android:$hilt_android"
+    annotationProcessor "com.google.dagger:hilt-android-compiler:$hilt_android_compiler"
 
         // instrumentation tests
-        androidTestImplementation  'com.google.dagger:hilt-android-testing:2.28-alpha'
-        androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.28-alpha'
+        androidTestImplementation  "com.google.dagger:hilt-android-testing:$hilt_android_testing"
+        androidTestAnnotationProcessor "com.google.dagger:hilt-android-compiler:$hilt_android_compiler"
 
         // unit tests
-        testImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
-        testAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.28-alpha'
+        testImplementation "com.google.dagger:hilt-android-testing:$hilt_android_testing"
+        testAnnotationProcessor "com.google.dagger:hilt-android-compiler:$hilt_android_compiler"
 }
