--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,28 @@
 
 buildscript {
     
+    ext {
+        appcompat = '1.1.0'
+        constraintlayout = '1.1.3'
+        play_services_maps = '17.0.0'
+        legacy_support_v4 = '1.0.0'
+        material = '1.1.0'
+        annotation = '1.1.0'
+        junit = '4.13'
+        androidx_junit = '1.1.1'
+        espressor_core = '3.2.0'
+        retrofit = '2.9.0'
+        converter_gson = '2.9.0'
+        lifecycle_extensions = '2.2.0'
+        lifecycle_viewmodel = '2.2.0'
+        navigation_fragment = '2.2.2'
+        navigation_ui = '2.2.2'
+        hilt_android = '2.28-alpha'
+        hilt_android_compiler = '2.28-alpha'
+        hilt_android_testing = '2.28-alpha'
+        hilt_android_compiler = '2.28-alpha'
+    }
+    
     repositories {
         google()
         jcenter()
