--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
 
     // simplify versions in app/build.gradle
@@ -17,7 +15,7 @@ buildscript {
         gson = '2.9.0'
         lifecycle = '2.2.0'
         navigation = '2.2.2'
-        hilt_android = '2.28-alpha'
+        hilt_android = '2.28-alpha' // can not use just "hilt" here, causes name conflict
     }
     
     repositories {
@@ -25,9 +23,10 @@ buildscript {
         jcenter()
 
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.0'
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_android"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_android" // Hilt
     }
 }
 
