--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,7 +120,9 @@ dependencies {
 
     // test fragments in isolation
     debugImplementation "androidx.fragment:fragment-testing:1.2.5"
-
     testImplementation "org.hamcrest:hamcrest-all:1.3"
+
+    // okhttp mock webserver
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.8.0"
 
 }
